# imv

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  CONTRIBUTING  LICENSE  Makefile  PACKAGERS.md  README.md  config.mk  freeimage.c  image.c  image.h  imv.1  jpeg.c  loader.c  main.c  meson.build  meson_options.txt  navigator.c  navigator.h  png.c  texture.c  texture.h  tiff.c  viewport.c  viewport.h
.builds/: archlinux.yml  debian.yml  fedora.yml  freebsd.yml  ubuntu.yml
contrib/: imv-folder  imv-folder.desktop
doc/: imv-dir.1.txt  imv-folder.1.txt  imv-msg.1.txt  imv.1  imv.1.txt  imv.5.txt
files/: imv  imv-dir.desktop  imv-folder  imv-folder.desktop  imv.desktop  imv_config
src/: backend.h  backend_freeimage.c  backend_freeimage.h  backend_libheif.c  backend_libjpeg.c  backend_libjpeg.h  backend_libnsgif.c  backend_libpng.c  backend_libpng.h  backend_librsvg.c  backend_librsvg.h  backend_libtiff.c  backend_libtiff.h  backend_rsvg.c  backend_rsvg.h  binds.c  binds.h  bitmap.c  bitmap.h  canvas.c  canvas.h  commands.c  commands.h  console.c  console.h  dummy_window.c  image.c  image.h  imv.c  imv.h  imv.sh  imv_msg.c  ini.c  ini.h  ipc.c  ipc.h  ipc_common.c  keyboard.c  keyboard.h  list.c  (+25 more)
test/: list.c  loader.c  navigator.c
